# f1-race-intel

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
src/f1_race_intel/: __init__.py  cli.py  config.py  db.py  main.py
src/f1_race_intel/analytics/: __init__.py  stints.py
src/f1_race_intel/api/: deps.py  routes.py  schemas.py
src/f1_race_intel/data/: __init__.py
src/f1_race_intel/data/openf1/: __init__.py  client.py  mappers.py  schemas.py
src/f1_race_intel/data/repositories/: __init__.py  race_data.py
src/f1_race_intel/data/services/: __init__.py  analytics.py  ingest.py  sessions.py
src/f1_race_intel/ingest/: __init__.py
src/f1_race_intel/models/: __init__.py  driver.py  lap.py  session.py  stint.py
tests/: conftest.py  factories.py  test_analytics.py  test_health.py  test_ingest.py
